# whyslow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  incorrect_diagnosis.yml
.github/workflows/: ci.yml  release.yml
docs/: launch-checklist.md  release-notes-v0.1.0.md  roadmap-seed-issues.md
docs/examples/: annotated-output.md  sample-report.json  sample-report.txt
src/: cli.rs  lib.rs  main.rs  model.rs
src/collect/: mod.rs  windows.rs
src/diagnose/: mod.rs  rules.rs
src/report/: json.rs  markdown.rs  mod.rs  text.rs  tui.rs
tests/: diagnose_rules.rs  text_report_snapshot.rs
