[package]
name = "whyslow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Windows terminal tool that explains why a PC feels slow and suggests next actions"
readme = "README.md"
keywords = ["windows", "diagnostics", "performance", "cli"]
categories = ["command-line-utilities", "os::windows-apis"]
repository = "https://github.com/MuhammedZohaib/whyslow"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_System_Performance"] }
